[gd_scene load_steps=2 format=3 uid="uid://d7xh5k9n2wqpa"]

[ext_resource type="Script" path="res://ui/dialogs/production_dialog.gd" id="1_production_dialog"]

[node name="ProductionDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_production_dialog")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Production Queue"
horizontal_alignment = 1

[node name="QueueList" type="ItemList" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AddButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add"

[node name="RemoveButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Remove"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Close"
